grammar/.antlr/DesmoscriptParser.java
// Generated from /Users/adrian/Documents/GitHub/desmoscript/grammar/Desmoscript.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DesmoscriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, STRING=48, NUMBER=49, IDENTIFIER_SEGMENT=50, WS=51;
	public static final int
		RULE_djson = 0, RULE_expression = 1, RULE_expressionList = 2, RULE_functionDefArgList = 3, 
		RULE_functionCallArgList = 4, RULE_list = 5, RULE_functionCall = 6, RULE_macroCall = 7, 
		RULE_identifier = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"djson", "expression", "expressionList", "functionDefArgList", "functionCallArgList", 
			"list", "functionCall", "macroCall", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "':'", "','", "'['", "']'", "'ds'", "'('", "')'", 
			"'true'", "'false'", "'null'", "'@'", "'import'", "'as'", "';'", "'settings'", 
			"'for'", "'='", "'\\'", "'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'>'", 
			"'<'", "'>='", "'<='", "'..'", "'sum'", "'product'", "'integral'", "'to'", 
			"'derivative'", "'macro'", "'fn'", "'ns'", "'with'", "'match'", "'=>'", 
			"'->'", "'()'", "'!()'", "'!('", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"STRING", "NUMBER", "IDENTIFIER_SEGMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Desmoscript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DesmoscriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DjsonContext extends ParserRuleContext {
		public DjsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_djson; }
	 
		public DjsonContext() { }
		public void copyFrom(DjsonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BooleanDJsonContext extends DjsonContext {
		public Token data;
		public BooleanDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class ObjectDJsonContext extends DjsonContext {
		public Token IDENTIFIER_SEGMENT;
		public List<Token> keys = new ArrayList<Token>();
		public DjsonContext djson;
		public List<DjsonContext> values = new ArrayList<DjsonContext>();
		public List<TerminalNode> IDENTIFIER_SEGMENT() { return getTokens(DesmoscriptParser.IDENTIFIER_SEGMENT); }
		public TerminalNode IDENTIFIER_SEGMENT(int i) {
			return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, i);
		}
		public List<DjsonContext> djson() {
			return getRuleContexts(DjsonContext.class);
		}
		public DjsonContext djson(int i) {
			return getRuleContext(DjsonContext.class,i);
		}
		public ObjectDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class NullDJsonContext extends DjsonContext {
		public NullDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class NumberDJsonContext extends DjsonContext {
		public Token data;
		public TerminalNode NUMBER() { return getToken(DesmoscriptParser.NUMBER, 0); }
		public NumberDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class DesmoscriptDJsonContext extends DjsonContext {
		public ExpressionContext expr;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DesmoscriptDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class ArrayDJsonContext extends DjsonContext {
		public DjsonContext djson;
		public List<DjsonContext> elements = new ArrayList<DjsonContext>();
		public List<DjsonContext> djson() {
			return getRuleContexts(DjsonContext.class);
		}
		public DjsonContext djson(int i) {
			return getRuleContext(DjsonContext.class,i);
		}
		public ArrayDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}
	public static class StringDJsonContext extends DjsonContext {
		public Token data;
		public TerminalNode STRING() { return getToken(DesmoscriptParser.STRING, 0); }
		public StringDJsonContext(DjsonContext ctx) { copyFrom(ctx); }
	}

	public final DjsonContext djson() throws RecognitionException {
		DjsonContext _localctx = new DjsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_djson);
		int _la;
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				_localctx = new NumberDJsonContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				((NumberDJsonContext)_localctx).data = match(NUMBER);
				}
				break;
			case STRING:
				_localctx = new StringDJsonContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(19);
				((StringDJsonContext)_localctx).data = match(STRING);
				}
				break;
			case T__0:
				_localctx = new ObjectDJsonContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(20);
					match(T__0);
					setState(21);
					match(T__1);
					}
					break;
				case 2:
					{
					setState(22);
					match(T__0);
					setState(23);
					((ObjectDJsonContext)_localctx).IDENTIFIER_SEGMENT = match(IDENTIFIER_SEGMENT);
					((ObjectDJsonContext)_localctx).keys.add(((ObjectDJsonContext)_localctx).IDENTIFIER_SEGMENT);
					setState(24);
					match(T__2);
					setState(25);
					((ObjectDJsonContext)_localctx).djson = djson();
					((ObjectDJsonContext)_localctx).values.add(((ObjectDJsonContext)_localctx).djson);
					setState(32);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(26);
						match(T__3);
						setState(27);
						((ObjectDJsonContext)_localctx).IDENTIFIER_SEGMENT = match(IDENTIFIER_SEGMENT);
						((ObjectDJsonContext)_localctx).keys.add(((ObjectDJsonContext)_localctx).IDENTIFIER_SEGMENT);
						setState(28);
						match(T__2);
						setState(29);
						((ObjectDJsonContext)_localctx).djson = djson();
						((ObjectDJsonContext)_localctx).values.add(((ObjectDJsonContext)_localctx).djson);
						}
						}
						setState(34);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(35);
					match(T__1);
					}
					break;
				}
				}
				break;
			case T__4:
				_localctx = new ArrayDJsonContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(39);
					match(T__4);
					setState(40);
					match(T__5);
					}
					break;
				case 2:
					{
					setState(41);
					match(T__4);
					setState(42);
					((ArrayDJsonContext)_localctx).djson = djson();
					((ArrayDJsonContext)_localctx).elements.add(((ArrayDJsonContext)_localctx).djson);
					setState(47);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(43);
						match(T__3);
						setState(44);
						((ArrayDJsonContext)_localctx).djson = djson();
						((ArrayDJsonContext)_localctx).elements.add(((ArrayDJsonContext)_localctx).djson);
						}
						}
						setState(49);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(50);
					match(T__5);
					}
					break;
				}
				}
				break;
			case T__6:
				_localctx = new DesmoscriptDJsonContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				match(T__6);
				setState(55);
				match(T__7);
				setState(56);
				((DesmoscriptDJsonContext)_localctx).expr = expression(0);
				setState(57);
				match(T__8);
				}
				break;
			case T__9:
			case T__10:
				_localctx = new BooleanDJsonContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(59);
				((BooleanDJsonContext)_localctx).data = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__9 || _la==T__10) ) {
					((BooleanDJsonContext)_localctx).data = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case T__11:
				_localctx = new NullDJsonContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(60);
				match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ActionExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ActionExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class JSONExprContext extends ExpressionContext {
		public DjsonContext jsonval;
		public DjsonContext djson() {
			return getRuleContext(DjsonContext.class,0);
		}
		public JSONExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class SumProdIntegralExprContext extends ExpressionContext {
		public Token op;
		public Token var;
		public ExpressionContext lo;
		public ExpressionContext hi;
		public ExpressionContext body;
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public SumProdIntegralExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ListMemberAccessExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ListMemberAccessExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionDefinitionExprContext extends ExpressionContext {
		public IdentifierContext fnname;
		public FunctionDefArgListContext fnargs;
		public ExpressionContext expression;
		public List<ExpressionContext> exprs = new ArrayList<ExpressionContext>();
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FunctionDefArgListContext functionDefArgList() {
			return getRuleContext(FunctionDefArgListContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FunctionDefinitionExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class NumberExprContext extends ExpressionContext {
		public TerminalNode NUMBER() { return getToken(DesmoscriptParser.NUMBER, 0); }
		public NumberExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class NamespaceDefinitionExprContext extends ExpressionContext {
		public Token nsname;
		public ExpressionContext expression;
		public List<ExpressionContext> exprs = new ArrayList<ExpressionContext>();
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public NamespaceDefinitionExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class IdentifierExprContext extends ExpressionContext {
		public IdentifierContext ident;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IdentifierExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ParentheticalExprContext extends ExpressionContext {
		public ExpressionContext expr;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParentheticalExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ListCompExprContext extends ExpressionContext {
		public ExpressionContext body;
		public Token IDENTIFIER_SEGMENT;
		public List<Token> variables = new ArrayList<Token>();
		public ExpressionContext expression;
		public List<ExpressionContext> lists = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> IDENTIFIER_SEGMENT() { return getTokens(DesmoscriptParser.IDENTIFIER_SEGMENT); }
		public TerminalNode IDENTIFIER_SEGMENT(int i) {
			return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, i);
		}
		public ListCompExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class NamedJsonExprContext extends ExpressionContext {
		public Token namedjsontype;
		public ExpressionContext jsonval;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NamedJsonExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ListExprContext extends ExpressionContext {
		public ListContext l;
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MacroDefinitionExprContext extends ExpressionContext {
		public IdentifierContext macroname;
		public FunctionDefArgListContext macroargs;
		public ExpressionContext expression;
		public List<ExpressionContext> exprs = new ArrayList<ExpressionContext>();
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FunctionDefArgListContext functionDefArgList() {
			return getRuleContext(FunctionDefArgListContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MacroDefinitionExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ImportExprContext extends ExpressionContext {
		public Token filename;
		public Token alias;
		public TerminalNode STRING() { return getToken(DesmoscriptParser.STRING, 0); }
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public ImportExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MultOrDivExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MultOrDivExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class AddOrSubExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AddOrSubExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class PointExprContext extends ExpressionContext {
		public ExpressionContext x;
		public ExpressionContext y;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public PointExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class DecoratedExprContext extends ExpressionContext {
		public Token qualifier;
		public ExpressionContext expr;
		public ExpressionContext jsonval;
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public DecoratedExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class AssignmentExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AssignmentExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MacroCallExprContext extends ExpressionContext {
		public MacroCallContext call;
		public MacroCallContext macroCall() {
			return getRuleContext(MacroCallContext.class,0);
		}
		public MacroCallExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class RangeExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public RangeExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class BlockExprContext extends ExpressionContext {
		public ExpressionContext expression;
		public List<ExpressionContext> exprs = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public BlockExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class StepRangeExprContext extends ExpressionContext {
		public ExpressionContext left;
		public ExpressionContext step;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StepRangeExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionCallExprContext extends ExpressionContext {
		public FunctionCallContext call;
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FunctionCallExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class DerivativeExprContext extends ExpressionContext {
		public Token var;
		public ExpressionContext body;
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DerivativeExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MemberAccessExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public Token right;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENTIFIER_SEGMENT() { return getToken(DesmoscriptParser.IDENTIFIER_SEGMENT, 0); }
		public MemberAccessExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class LogicalExprContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public LogicalExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MatchExprContext extends ExpressionContext {
		public ExpressionContext expression;
		public List<ExpressionContext> predicate = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> result = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> fallback = new ArrayList<ExpressionContext>();
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MatchExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				_localctx = new FunctionCallExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(64);
				((FunctionCallExprContext)_localctx).call = functionCall();
				}
				break;
			case 2:
				{
				_localctx = new JSONExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(65);
				match(T__12);
				setState(66);
				((JSONExprContext)_localctx).jsonval = djson();
				}
				break;
			case 3:
				{
				_localctx = new MacroCallExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(67);
				((MacroCallExprContext)_localctx).call = macroCall();
				}
				break;
			case 4:
				{
				_localctx = new ImportExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68);
				match(T__13);
				setState(69);
				((ImportExprContext)_localctx).filename = match(STRING);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(70);
					match(T__14);
					setState(71);
					((ImportExprContext)_localctx).alias = match(IDENTIFIER_SEGMENT);
					}
				}
